currency section now fetches currencies and displays them as options. styling of select changed from max-width 10 to width 10 to prevent layout shifts during data fetching. transition animations adjusted slightly with increased delay to give more time to scroll up before starting animation.

--- a/styles/mainsection.module.css
+++ b/styles/mainsection.module.css
@@ -166,7 +166,7 @@ span.mainSectionLabelIntro h5 {
 }
 
 select.limitWidth {
-  max-width: 10rem;
+  width: 10rem;
 }
 .resultsSection {
   margin-bottom: -0.5rem;
